:bug: Fixes navbar wrapping on mobile

--- a/public/css/index.scss
+++ b/public/css/index.scss
@@ -169,6 +169,7 @@ header {
 // #region
 nav {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   overflow: hidden;
   background-color: var(--bg-sec);
